# Carabao-Fin

./: .gitignore
.claude/: settings.local.json
.github/agents/: mobile-fixer.agent.md
backend/: .env.example  README.md  carabao.db  database.py  main.py  models.py  pyproject.toml  requirements.txt
backend/app/: auth.py  database.py  main.py  models.py  schemas.py
backend/app/api/: dependencies.py
backend/app/api/routes/: _order_helpers.py  auth.py  carts.py  email.py  merchant_onboarding.py  merchants.py  orders.py  payments.py  router.py  sms.py  tracking.py  users.py
backend/app/api/webhooks/: paymongo.py
backend/app/api/webhooks/clerk/: upsert.py
backend/app/core/: __init__.py  database.py  security.py
backend/app/integrations/: __init__.py
backend/app/integrations/sms/: __init__.py  semaphore.py
backend/app/models/: cart.py  current_orders.py  merchant.py  merchant_application.py  merchant_payout.py  mobile_credential.py  models.py  order.py  order_history.py  payout_batch.py  produce.py  shopPage.py  transaction.py  user.py
backend/app/schemas/: __init__.py  cart.py  merchant.py  merchantPage.py  merchant_application.py  merchant_performance.py  order.py  payment.py  produce.py  shopPage.py  user.py
backend/app/services/: email.py  merchant_service.py  paymongo.py  r2_service.py  user_service.py
backend/routers/: users.py
backend/schemas/: user.py
backend/scripts/: reset_db.py
frontend/carabao-app/: .gitignore  BETTERAUTH_SETUP.md  SETUP_STEPS.md  middleware.ts  package-lock.json  package.json  proxy.ts  tsconfig.tsbuildinfo
(+120 files in other folders)
